--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "source"]
 	path = source
-	url = https://github.com/QingyangLin/WebsiteSource
+	url = https://github.com/QingyangLin/WebsiteSource.git
